# invest

./: .gitignore  a.py  docker-compose.yml  test.py
backend/: .gitignore  .python_history  Dockerfile  Makefile  alembic.ini  docker-compose.yml  initial_data.py  pyproject.toml  res.txt
backend/alembic/: env.py
backend/alembic/versions/: 2023-04-24_add_models.py  2023-04-24_change_models_fields.py  2023-04-27_create_models.py  2023-05-02_add_operation_models.py  2023-05-02_change_operation_fk_from_uid_to_figi.py  2023-05-02_traverse_currency_to_inherit_instrument_.py  2023-05-11_add_robot_models.py  2023-05-27_add_backtest_results.py  2023-05-27_change_some_fields_of_backtest.py  2023-05-27_change_some_fields_of_bakctest.py  2023-05-29_add_api_trade_flag.py  2023-06-23_add_metrics.py  2023-11-28_add_arbitrage_settings_change_models.py  2023-11-30_change_deltas_model.py  823649d47178_add_user_model.py  9b9d3df2baf4_add_models.py
backend/app/: initial_data.py  prestart.sh  pyproject.toml
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/http/: router.py
backend/app/app/api/http/v1/: router.py
backend/app/app/core/: config.py
backend/app/app/db/: base.py  base_class.py  session.py
backend/app/app/models/: __init__.py  account.py  candle.py  currency.py  instrument.py  mixins.py  portfolio.py  user.py
backend/app/app/services/: auth.py  users.py
backend/cmd/: lint.sh  prestart.sh  start-dev.sh  start.sh
backend/src/: api.py  config.py  constants.py  decorators.py  exceptions.py  initial_data.py  logging.py  main.py  models.py  router.py  utils.py  worker.py
backend/src/account/: dependencies.py  models.py  router.py  schemas.py  service.py  tinkoff.py
backend/src/api/: deps.py
backend/src/api/http/v1/: router.py
backend/src/arbitrage/: flows.py  models.py  router.py  schemas.py  service.py
backend/src/auth/: service.py
backend/src/backtest/: dependencies.py  flows.py  models.py  router.py  schemas.py  service.py
backend/src/common/: constants.py  decorators.py  exceptions.py  pagination.py  schemas.py  utils.py
backend/src/db/: base.py  base_class.py  init_db.py  mixins.py  session.py
backend/src/instrument/: flows.py  models.py  router.py  schemas.py  service.py
backend/src/models/: account.py  candle.py  currency.py  instrument.py  portfolio.py  user.py
backend/src/operation/: flows.py  models.py  router.py  schemas.py  service.py
backend/src/operations/: flows.py  models.py
backend/src/portfolio/: flows.py  models.py  router.py  schemas.py  service.py
backend/src/robot/: dependencies.py  docker.py  exception.py  models.py  router.py  schemas.py  service.py
backend/src/services/: auth.py  users.py
backend/src/user/: dependencies.py  models.py  router.py  service.py
frontend/: Dockerfile  index.html  orval.config.ts  package.json
frontend/src/: App.tsx  index.css  main.tsx  utils.ts
frontend/src/api/: auth.ts  axios.ts
frontend/src/context/: AuthContext.tsx  WithAxios.tsx
frontend/src/data/: routes.tsx  types.ts
frontend/src/hooks/: useAuth.ts  useAxiosPrivate.ts  useGetOperationsInfinite.ts  useSubaccount.ts
frontend/src/models/: accountCreate.ts  accountScheme.ts  accountUpdate.ts  activeOrderScheme.ts  arbitrageDeltasScheme.ts  arbitrageResult.ts  backtestCreate.ts  backtestCreateIntervalRaw.ts  backtestCreateRobotConfig.ts  backtestRead.ts  backtestReadIntervalRaw.ts  backtestReadResults.ts  backtestReadRobotConfig.ts  bearerResponse.ts  bodyAuthJwtLoginApiV1AuthLoginPost.ts  cancelOrderScheme.ts  containerMessage.ts  containerStatus.ts  defaultResponse.ts  errorModel.ts  errorModelDetail.ts  errorModelDetailAnyOf.ts  hTTPValidationError.ts  (+49 more)
(+84 files in other folders)
