[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sersh4nt <rektf12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
