[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sersh4nt <rektf12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"
fastapi-users = { extras = ["sqlalchemy"], version = "^10.4.2" }
asyncpg = "^0.27.0"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
tinkoff-investments = "^0.2.0b54"
celery = { extras = ["redis"], version = "^5.2.7" }
psycopg = { extras = ["binary"], version = "^3.1.8" }
httpx = "^0.24.0"
docker = "^6.1.1"
fastapi-filter = { extras = ["sqlalchemy"], version = "^0.6.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# lint config
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = ">=0.0.270, <1.0.0"
black = "^23.0.0"
mypy = "^1.5.0"
types-python-dateutil = "^2.8.19.14"

[tool.ruff]
select = ["N", "B", "A", "E", "W", "F", "ASYNC", "S", "D", "I"]
ignore = [
    "D106",
    "PT001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D104",
    "W293",
    "S101",
    "D212",
    "D200",
    "UP007",
    "S105",
    "S311",
    "A003",
    "A002",
    "B008",
]

line-length = 120

extend-exclude = [
    "stubs",
    "*pb2*",
    ".git",
    "pycache",
    "build",
    "dist",
    "__init__.py",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.mypy]
packages = ["src"]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
